Reworked input text field.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
             <TnTSideNavListItem Icon="business" Label="Buttons" Href="Buttons" />
             <TnTSideNavListItem Icon="add_circle" Label="Segmented Buttons" Href="segmentedButton" />
             <TnTSideNavListItem Icon="search" Label="Cards" Href="card" />
-            <TnTSideNavListItem Label="Weather" Href="weather" />
+            <TnTSideNavListItem Icon="settings" Label="Forms" Href="forms" />
         </TnTSideNavList>
     </SideNav>
 
