--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -4,6 +4,7 @@
 //@import 'Components/_body.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
+@import 'Components/_form.scss';
 //@import 'Components/_dialogcontainer.scss';
 //@import 'Components/_grid.scss';
 //@import 'Components/_header.scss';
