--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,6 +1,6 @@
 ﻿@import 'Common/_common.scss';
 @import 'Common/_default_typeography.scss';
-//@import 'Common/_grid.scss';
+@import 'Common/_grid.scss';
 //@import 'Components/_body.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
